--- a/local-beamer.tex
+++ b/local-beamer.tex
@@ -191,6 +191,10 @@ $if(dir)$
   \newenvironment{LTR}{\beginL}{\endL}
 \fi
 $endif$
+
+% my header components
+\setbeamertemplate{frametitle}[default][center]
+
 $for(header-includes)$
 $header-includes$
 $endfor$
